<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".wszystkie">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFF8CD"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="263dp"
            android:contentDescription="@string/desc"
            app:srcCompat="@mipmap/twicelayout" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/nayeon_BUTTON"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:text="@string/nayeon_BUTTON" />

                <Button
                    android:id="@+id/jeongyeon_BUTTON"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:text="@string/jeongyeon_BUTTON" />

                <Button
                    android:id="@+id/momo_BUTTON"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:text="@string/momo_BUTTON" />

                <Button
                    android:id="@+id/sana_BUTTON"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:text="@string/sana_BUTTON" />

                <Button
                    android:id="@+id/jihyo_BUTTON"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:text="@string/jihyo_BUTTON" />

                <Button
                    android:id="@+id/mina_BUTTON"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:text="@string/mina_BUTTON" />

                <Button
                    android:id="@+id/dahyun_BUTTON"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:text="@string/dahyun_BUTTON" />

                <Button
                    android:id="@+id/chaeyoung_BUTTON"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:text="@string/chaeyoung_BUTTON" />

                <Button
                    android:id="@+id/tzuyu_BUTTON"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:text="@string/tzuyu_BUTTON" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>