<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profil_karty">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFF8CD"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="match_parent"
            android:layout_height="244dp"
            android:contentDescription="@string/desc"
            app:srcCompat="@mipmap/twicelayout" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="246dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/card"
                android:layout_width="188dp"
                android:layout_height="230dp"
                android:contentDescription="@string/card"
                app:srcCompat="@mipmap/feelspecialnayeon1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="186dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/idcard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/idcard"
                    android:textColor="#E91E63" />

                <TextView
                    android:id="@+id/idol"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/idol"
                    android:textColor="#E91E63" />

                <TextView
                    android:id="@+id/album"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/album"
                    android:textColor="#E91E63" />

                <TextView
                    android:id="@+id/pricecard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/pricecard"
                    android:textColor="#E91E63"
                    android:textColorHighlight="#E91E63" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/button2"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/dodaj_BUTTON" />

        <Button
            android:id="@+id/button3"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/wymiana_BUTTON" />

        <Button
            android:id="@+id/button4"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/sprzedaz_BUTTON" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>