<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF8CD"
    tools:context=".konto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible"
        tools:visibility="visible">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="263dp"
            android:contentDescription="@string/desc"
            app:srcCompat="@mipmap/twicelayout" />

        <Button
            android:id="@+id/profile_BUTTON"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/profile_BUTTON" />

        <Button
            android:id="@+id/allcards_BUTTON"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/allcards_BUTTON" />

        <Button
            android:id="@+id/mycards_BUTTON"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/mycards_BUTTON" />

        <Button
            android:id="@+id/trading_BUTTON"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/trading_BUTTON" />

        <Button
            android:id="@+id/selling_BUTTON"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/selling_BUTTON" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>