<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".rejestracja">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFF8CD"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="281dp"
            android:background="#FFF8CD"
            android:contentDescription="@string/desc"
            app:srcCompat="@mipmap/twicelayout" />

        <EditText
            android:id="@+id/TextView_email"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:autofillHints="E-mail"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textColor="#E91E63"
            android:textColorHint="#E681A3" />

        <EditText
            android:id="@+id/TextView_login2"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:ems="10"
            android:hint="@string/login"
            android:autofillHints="Login"
            android:inputType="textPersonName"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textColor="#E91E63"
            android:textColorHint="#E681A3" />

        <EditText
            android:id="@+id/regpassword"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:ems="10"
            android:hint="@string/regpassword"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textColor="#E91E63"
            android:textColorHint="#DD618B"
            android:autofillHints="@string/regpassword"/>

        <EditText
            android:id="@+id/TextView_c_password"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:autofillHints="Powtórz hasło"
            android:ems="10"
            android:hint="@string/c_password"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textColor="#E91E63"
            android:textColorHint="#E681A3" />

        <Switch
            android:id="@+id/switch_BUTTON"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/switch1"
            android:textColor="#6C6F85"
            android:textColorHighlight="#E91E63" />

        <Button
            android:id="@+id/zarej_BUTTON"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/zarej_BUTTON" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>